# mail_summariser

./: .gitignore  .pylintrc  AGENT.md  AGENTS.md  CLAUDE.md  LICENSE  README.md  REPORT.md  STATUS.md  calibration_report.json  dev-requirements.txt  pyproject.toml  pyrightconfig.json  render_homebrew_formula.py  run_app.sh  start_backend.sh  start_ollama.sh
MailSummariser.xcodeproj/: project.pbxproj
backend/: __init__.py  app.py  config.py  db.py  dummy_state.py  fake_mail_server.py  llm_provider_clients.py  logging_service.py  mail_index_service.py  mail_service.py  main.py  model_provider_service.py  requirements.txt  router_context.py  routers_actions.py  routers_devtools.py  routers_mail_index.py  routers_mailboxes.py  routers_runtime_models.py  routers_saved_scopes.py  routers_settings.py  routers_summaries.py  routers_triage.py  saved_scope_service.py  schemas.py  start_backend.sh  summary_service.py  triage_service.py
docs/: CALIBRATION.md  IMAP_TEST_PLAN.md  MIGRATION_PR.md  MIGRATION_TO_MODELITO.md  Open_Interpreter.md  TESTING_STRATEGY.md  index.html  references.md  site.css  site.js
macos-app/: AppState.swift  BackendBridge.swift  ContentView.swift  LogView.swift  MailSummariserApp.swift  Models.swift  SearchView.swift  SettingsView.swift  SummaryView.swift
macos-app-tests/: AppStateTests.swift  BackendBridgeTests.swift
mail_summariser.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
mail_summariser.xcodeproj/: project.pbxproj
modelito/: README.md  REPORT.md  __init__.py  anthropic.py  base.py  config.py  connector.py  exceptions.py  ollama.py  ollama_service.py  openai.py  pyproject.toml  scheduler.py  timeout.py  tokenizer.py  translation.py  utils.py
prompt_pack/: 00-master-plan.md  01-live-imap-hardening.md  02-multi-account-settings.md  03-mailbox-discovery.md  04-server-side-search.md  05-local-index.md  README.md  (+5 more)
(+61 files in other folders)
