[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mail-summariser"
version = "0.1.2"
description = "Backend service for searching mail and generating summaries via pluggable LLM providers"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115,<1",
  "pydantic>=2.8,<3",
  "uvicorn>=0.30,<1",
  "modelito==1.2.2",
  "openai>=1,<2",
  "anthropic>=0.40,<1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3,<9",
  "httpx>=0.27,<1",
  "hypothesis>=6.120,<7",
  "playwright>=1.48,<2",
]

[tool.pytest.ini_options]
pythonpath = [".", "backend"]
testpaths = ["tests"]

[tool.setuptools]
packages = ["backend"]
